reset password UI created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,11 @@
         <activity
             android:name=".pwdrecovery.PwdRecoveryActivity"
             android:label="@string/title_activity_pwd_recovery"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".bottombar.BottomBarActivity" />
+        </activity>
         <activity
             android:name=".custombook.CustomBookActivity"
             android:label="@string/title_activity_custom_book"
