--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         <activity
             android:name=".custombook.CustomBookActivity"
             android:label="@string/title_activity_custom_book"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -76,6 +77,7 @@
         <activity
             android:name=".customcourse.CustomCourseActivity"
             android:label="@string/title_activity_custom_course"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
